# update-icon-cache

./: Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  updateiconcache.c
